# garden.matplotlib

./: README.md  backend_kivy.py  backend_kivyagg.py  pyproject.toml  requirements.txt
examples/: test_animate.py  test_backend.py  test_dessant.py  test_events.py  test_plt.py
kivy_garden/matplotlib/: __init__.py  backend_kivy.py  backend_kivyagg.py
