[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kivy_garden.matplotlib"
authors = [ {name = "Kivy", email = "kivy@kivy.org"} ]
version = "0.1.0"
description = "Matplotlib backends using kivy"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Kivy", "kivy-garden"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
]

dependencies = ["matplotlib >= 3.0.0"]

[tool.setuptools]
packages = ["kivy_garden.matplotlib"]
